...
                android:layout_height="wrap_content"
                android:text="Abilities"/>

            <TextView
                android:textSize="15sp"
                android:textColor="@android:color/holo_blue_bright"
                android:id="@+id/tv_title_ab"
                android:text="Title"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="20dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginHorizontal="20dp"
                android:id="@+id/tv_desc_ab"
                android:textStyle="bold"
                android:text="Description"
                android:textColor="@android:color/darker_gray"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
...
